# Uni-talot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Justfile  Makefile  README.md  SECURITY.md  cards.js  docker-compose.yml  index.html  manifest.webmanifest  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  script.js  style.css  sw.js  tailwind.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: album-release.yml  apply-patch.yml  ci.yml  daily-generation.yml  deploy-netlify.yml  deploy.yml  test.yml  weekly-report.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/routers/: process.py
backend/scripts/: calibrate_homestyler.py  dump_openapi.py  ec3d_cli.py  scale_model.py  verify_dependencies.py
backend/services/: auth.py  cleanup.py  errors.py  health_check.py  homestyler_bot.py  http_retry.py  image_downloader.py  job_manager.py  logging_config.py  model_generator.py  rate_limit.py  (+4 more)
config/: config.yaml
docs/: DESIGN.md  GOOGLE_SHEETS_SETUP.md  HANDOFF.md  architecture.md  legal-compliance.md  openapi.json  setup.md  trellis_colab.ipynb
extension/: manifest.json  package-lock.json  package.json
patches/: pending.b64  pending.diff
report/: aggregate.mjs  weekly-report-spec.md
scripts/: render_popup_screenshot.py  run_daily.py  run_release.py  setupSheets.ts
tests/: test_components.py  test_enhancements.py  test_pipeline.py
toban/: index.html
(+138 files in other folders)
